Fix layout issue with iDevices

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -121,7 +121,7 @@ body > .container {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     max-width: 900px;
-    padding: 100px 85px 100px 85px;
+    padding: 100px 85px;
   }
 }
 
@@ -163,7 +163,7 @@ article header h1 a {
     position: relative;
     width: 100%;
     height: auto;
-    min-height: 300px;
+    min-height: 480px;
     -webkit-box-shadow: inset 0 0 -3px hsla(0, 0%, 0%, 0.9);
     -moz-box-shadow: inset 0 0 -3px rgba(0,0,0,0.3);
     box-shadow: inset 0 0 -3px  hsla(0, 0%, 0%, 0.9);
@@ -171,11 +171,13 @@ article header h1 a {
     .subtitle {
       display: none;
     }
-    @media only screen and (max-width: 300px) { 
-      min-height: 350px;
+    @media only screen and (max-width: 300px) {
+      min-height: 450px;
+    }
+    @media only screen and (max-width: 320px) {
+      min-height: 520px;
     }
   }
-
 
   .right {
     box-sizing: border-box;
