--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,3 +2,12 @@
   @extend .sans;
   margin-top: 2em;
 }
+
+@media only screen and (max-width: 320px) {
+  .inner-left > footer p.credit-copyright {
+    display: none;
+  }
+  .inner-right > footer p.credit {
+    font-size: 75%;
+  }
+}
